--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 
 /* Header */
+.fixed-element {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+@media only screen and (max-width: 768px) {
+  .fixed-element {
+    position: relative;
+  }
+}
+
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
