--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.img-home, .div-img-home {
+  border-radius: 50px 0px 0px 0px;
+}
+
 /* responsive */
 @media only screen and (max-width: 768px) {
   #navbars {
@@ -26,6 +30,47 @@
   #card1 {
     padding-top: 10px;
     padding-bottom: 20px;
+  }
+  .img-home, .div-img-home {
+    width: 100%;
+    height: 50%;
+    border-radius: 20px 20px 0px 0px;
+  }
+  .h5-card {
+    padding-top: 5px;
+    padding-left: 10px;
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  /* #navbars {
+    margin-right: 100px;
+    padding-right: 100px;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+  } */
+  #home {
+    padding-top: 120px;
+  }
+  #about {
+    padding-top: 30px;
+  }
+  #project {
+    padding-top: 100px;
+  }
+  #contact {
+    padding-top: 50px;
+  }
+
+  #card1 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+  .img-home, .div-img-home {
+    width: 100%;
+    height: 50%;
+    border-radius: 20px 20px 0px 0px;
   }
   .h5-card {
     padding-top: 5px;
