--- a/style.css
+++ b/style.css
@@ -3,17 +3,36 @@
   padding: 0;
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+.navbars-hover {
+  border-radius: 12px;
+}
+
+.navbars-hover:hover {
+  cursor: pointer;
+  border-radius: 12px;
+  background-color: rgb(20, 20, 20);
+  color: black;
+  transition: .6s all ease-in-out;
+}
+
 .img-home, .div-img-home {
   border-radius: 50px 0px 0px 0px;
 }
 
 /* responsive */
 @media only screen and (max-width: 768px) {
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
   #navbars {
     position: fixed;
     top: 0;
     z-index: 999;
-    font-size: 12px;
+    font-size: 11px;
   }
   .img-navbar {
     width: 70%;
@@ -111,23 +130,30 @@
     padding-top: 30px;
   }
   #row-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
     padding-right: 25px;
   }
   #certificate-card1 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: start;
     align-items: center;
     padding: 30px 10px 10px 10px;
   }
   #certificate-card2 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
   #certificate-card3 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: end;
     align-items: center;
     padding: 10px 10px 80px 10px;
   }
