--- a/style.css
+++ b/style.css
@@ -34,14 +34,31 @@ body {
     z-index: 999;
     font-size: 11px;
   }
-  .img-navbar {
-    width: 70%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 85px;
+/*   
+  #div-img-nav-text {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-gap: 2px;
+    margin: 0px;
   }
+  .span-navbar {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-gap: 2px;
+    padding: 1px 2px;
+  }
+  .img-navbar {
+    width: 100%;
+    height: 60%;
+  }
+  .svg-navbar {
+    width: 16px;
+    height: 16px;
+  }
+  .nav-text {
+    display: none;
+  } */
+
   #home {
     padding-top: 120px;
   }
@@ -116,44 +133,73 @@ body {
   }
 }
 @media only screen and (max-width: 1000px) {
-  /* #navbars {
-    margin-right: 100px;
-    padding-right: 100px;
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+  #navbars {
     position: fixed;
     top: 0;
     z-index: 999;
+    font-size: 11px;
+  }
+/*   
+  #div-img-nav-text {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-gap: 2px;
+    margin: 0px;
+  }
+  .span-navbar {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-gap: 2px;
+    padding: 1px 2px;
+  }
+  .img-navbar {
+    width: 100%;
+    height: 60%;
+  }
+  .svg-navbar {
+    width: 16px;
+    height: 16px;
+  }
+  .nav-text {
+    display: none;
   } */
+
   #home {
     padding-top: 120px;
+  }
+  #seinki {
+    font-size: 26px;
+  } 
+  .desk-singkat, .text-about, .text-card, .text-card-exp {
+    /* text-align: center; */
+    font-size: 15px;
+    /* font-weight: normal; */
+    /* font-display: 5px; */
   }
   #about {
     padding-top: 30px;
   }
   #row-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    padding-right: 25px;
+    padding-right: 30px;
   }
   #certificate-card1 {
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
     padding: 30px 10px 10px 10px;
   }
   #certificate-card2 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px 10px 10px 10px;
   }
   #certificate-card3 {
     display: flex;
-    flex-direction: column;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     padding: 10px 10px 80px 10px;
   }
@@ -163,12 +209,13 @@ body {
   #contact {
     padding-top: 50px;
   }
+
   #card1 {
     padding-top: 10px;
     padding-bottom: 20px;
   }
   #blog {
-    padding-left: 0px;
+    padding-right: 0px;
   }
   .img-home, .div-img-home {
     width: 100%;
@@ -187,12 +234,10 @@ body {
     height: 300px;
     width: 300px;
     padding-top: 20px;
+    padding-bottom: 20px;
   }
   .footer-text {
     font-size: 12px;
-  }
-  footer {
-    padding-bottom: 500px;
   }
 }
 
